Temporary fix for Font Awesome icon flicker

--- a/themes/grind-rip/assets/scss/pages/_about.scss
+++ b/themes/grind-rip/assets/scss/pages/_about.scss
@@ -16,6 +16,7 @@
     .socials {
         font-size: 20px;
         padding: 0;
+        height: 1.5rem;
     }
 
     .socials li {
